# --
# Copyright (c) 2012 by itopia.pl team.
# 
# src/libnpa/Makefile.am
# Author: Lukasz Marcin Podkalicki <lukasz@podkalicki.com>
# --

AM_CPPFLAGS = -I. -I$(top_srcdir)/include
EXTRA_DIST = $(top_srcdir)/include/queue.h
include_HEADERS = $(top_srcdir)/include/npa.h
lib_LTLIBRARIES = libnpa.la
libnpa_la_SOURCES = npa.c
#libnpa_la_LIBADD = 
